# WordCounter

./: .gitignore  CMakeLists.txt  README.md  res_alphabet.txt  res_numbers.txt  test.py  time_results.xlsx
dependencies/: file_reader.cpp  file_reader.h  join_threads.h  thread_pool.cpp  thread_pool.h  thread_safe_queue.cpp  thread_safe_queue.h
src/: Task.cpp  Task.h  conf_reader.cpp  conf_reader.h  main.cpp  main_config.h  map_manipulation.cpp  map_manipulation.h  map_reduce.cpp  pool_from_qt.cpp  read.cpp  read.h
